# DII

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  release.yml  test.yml
data/: sample_input.csv
dii/: __init__.py
docs/: DATA_SOURCES.md
examples/: quickstart.ipynb  validation.ipynb
fresh_test_venv/: pyvenv.cfg
fresh_test_venv/Scripts/: activate  activate.bat
nutrition/data/output/: dii_scores_python.csv  dii_scores_python_20240602.csv  hei_scores.csv  hei_usual_intake.csv
nutrition/data/raw/: DII_Reference_Table.csv  DII_for_confirmation.csv  DII_for_confirmation_renamed.csv  FPED_1718.csv  nutrient_name_bridge.csv
nutrition/input/: DII_Input_20240602.csv
nutrition/notebooks/: hei.ipynb  mind.ipynb
nutrition/notebooks/validation/: dii.ipynb
src/dii/: __init__.py  __main__.py  calculator.py  reader.py  reference.py  viewer.py  visualization.py
src/dii/data/: __init__.py  dii_reference.csv
templates/: TEMPLATE_README.md  analysis_template.ipynb  input_template.csv
tests/: __init__.py  test_dii.py
