[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dii-calculator"
version = "1.0.12"
description = "A Python implementation of the Dietary Inflammatory Index (DII) calculator for nutritional epidemiology research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ted Clark", email = "tedclark94@gmail.com"},
    {name = "Larissa Strath", email = "larissastrath@ufl.edu"},
]
maintainers = [
    {name = "Ted Clark", email = "tedclark94@gmail.com"},
]
keywords = [
    "dietary inflammatory index",
    "DII",
    "nutrition",
    "epidemiology",
    "inflammation",
    "dietary assessment",
    "NHANES",
    "public health",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "bumpver>=2023.1129",
]
all = [
    "dii-calculator[dev]",
]

[project.urls]
Homepage = "https://github.com/strathlab-data/DII"
Documentation = "https://github.com/strathlab-data/DII#readme"
Repository = "https://github.com/strathlab-data/DII"
Issues = "https://github.com/strathlab-data/DII/issues"

[project.scripts]
dii = "dii.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dii*"]

[tool.setuptools.package-data]
"dii" = ["data/*.csv"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.bumpver]
current_version = "1.0.12"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "release: v{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/dii/__init__.py" = ['__version__ = "{version}"']
"CITATION.cff" = ['^version: {version}']

